data/derived/comb/progs/unify/prog6313.ml.out
Characters 51-52:
  List.fold_right (fun x n -> n * n) 0;;
                                     ^
Error: This expression has type int but an expression was expected of type
         'a list
